--- a/user_dashboard.css
+++ b/user_dashboard.css
@@ -17,6 +17,7 @@ nav {
     justify-content: right;
     padding: 22px 32px;
     align-items: center;
+    height: 80px;
 }
 
 a {
@@ -50,13 +51,52 @@ button:hover {
 }
 
 .container {
-    display: flex;
-    background: white;
-    height: 100%;
+    height: calc(100vh - 80px);
     width: 100%;
-    margin: 0 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    background: white;
+    max-width: 450px;
+    padding: 30px;
+    border-radius: 10px;
 }
 
 .container h1 {
-    font-size: 10px;
+    font-size: 34px;
+    margin-bottom: 15px;
+}
+
+.container h1 span {
+    color: #24a0ed;
+}
+
+.page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.page p {
+    font-size: 16px;
+    margin-bottom: 15px;
+}
+
+.page-box {
+    background: #24a0ed;
+    padding: 12px 24px;
+    border-radius: 6px;
+}
+
+.page-box span {
+    font-size: 16px;
+    font-weight: 500;
+    color: white;
 }
